{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 175,
  "lineage": "753aa594-029b-faca-7f70-b8c4ac728252",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "cadastro_web_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00cbaa29eee788d20",
            "arn": "arn:aws:ec2:us-east-1:609278931430:elastic-ip/eipalloc-00cbaa29eee788d20",
            "association_id": "eipassoc-0913bf854914612c3",
            "domain": "vpc",
            "id": "eipalloc-00cbaa29eee788d20",
            "instance": "i-061e54da649c7a797",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05f6b3ee678050b62",
            "private_dns": "ip-10-0-1-149.ec2.internal",
            "private_ip": "10.0.1.149",
            "public_dns": "ec2-54-156-244-175.compute-1.amazonaws.com",
            "public_ip": "54.156.244.175",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cadastro_web_eip_0"
            },
            "tags_all": {
              "Name": "cadastro_web_eip_0"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.cadastro_web",
            "aws_security_group.cadastro_web_sg",
            "aws_subnet.cadastro_public_subnet",
            "aws_vpc.cadastro_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cadastro_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0718b4ac01274c8cb",
            "arn": "arn:aws:ec2:us-east-1:609278931430:instance/i-061e54da649c7a797",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-061e54da649c7a797",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05f6b3ee678050b62",
            "private_dns": "ip-10-0-1-149.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-079581b5534153f98",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0617812da414d29cb",
            "tags": {
              "Name": "cadastro_web_0"
            },
            "tags_all": {
              "Name": "cadastro_web_0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f3e6593f408f4be7"
            ]
          },
          "dependencies": [
            "aws_security_group.cadastro_web_sg",
            "aws_subnet.cadastro_public_subnet",
            "aws_vpc.cadastro_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cadastro_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:609278931430:internet-gateway/igw-0bcd0720d3ca90c52",
            "id": "igw-0bcd0720d3ca90c52",
            "owner_id": "609278931430",
            "tags": {
              "Name": "cadastro_igw"
            },
            "tags_all": {
              "Name": "cadastro_igw"
            },
            "vpc_id": "vpc-05bfda49987ebf478"
          },
          "dependencies": [
            "aws_vpc.cadastro_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cadastro_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:609278931430:route-table/rtb-06120dee7b6f70d39",
            "id": "rtb-06120dee7b6f70d39",
            "owner_id": "609278931430",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05bfda49987ebf478"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cadastro_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cadastro_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:609278931430:route-table/rtb-0bf3bb6bded5cda01",
            "id": "rtb-0bf3bb6bded5cda01",
            "owner_id": "609278931430",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bcd0720d3ca90c52",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05bfda49987ebf478"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cadastro_igw",
            "aws_vpc.cadastro_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3c4f7afcc21a02a",
            "route_table_id": "rtb-06120dee7b6f70d39",
            "subnet_id": "subnet-058b90871bbffea06"
          },
          "dependencies": [
            "aws_route_table.cadastro_private_rt",
            "aws_subnet.cadastro_private_subnet",
            "aws_vpc.cadastro_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ee3be9850ff0c9a",
            "route_table_id": "rtb-06120dee7b6f70d39",
            "subnet_id": "subnet-07ffe2257ee10497f"
          },
          "dependencies": [
            "aws_route_table.cadastro_private_rt",
            "aws_subnet.cadastro_private_subnet",
            "aws_vpc.cadastro_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07470b24acad055f9",
            "route_table_id": "rtb-0bf3bb6bded5cda01",
            "subnet_id": "subnet-0617812da414d29cb"
          },
          "dependencies": [
            "aws_internet_gateway.cadastro_igw",
            "aws_route_table.cadastro_public_rt",
            "aws_subnet.cadastro_public_subnet",
            "aws_vpc.cadastro_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cadastro_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:609278931430:security-group/sg-006a0a37f2e593a6f",
            "description": "Security group para bancos de dados do cadastro",
            "egress": [],
            "id": "sg-006a0a37f2e593a6f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Permitir trafego Postgres apenas do web sg",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f3e6593f408f4be7"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "cadastro_db_sg",
            "name_prefix": "",
            "owner_id": "609278931430",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cadastro_db_sg"
            },
            "tags_all": {
              "Name": "cadastro_db_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05bfda49987ebf478"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.cadastro_web_sg",
            "aws_vpc.cadastro_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cadastro_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:609278931430:security-group/sg-0f3e6593f408f4be7",
            "description": "Security group para servidores web do cadastro",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir todo o trafego de saida",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f3e6593f408f4be7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir todo o trafego via HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "201.32.66.156/32"
                ],
                "description": "Permitir SSH do meu computador",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cadastro_web_sg",
            "name_prefix": "",
            "owner_id": "609278931430",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cadastro_web_sg"
            },
            "tags_all": {
              "Name": "cadastro_web_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05bfda49987ebf478"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ingress"
              }
            ]
          ],
          "dependencies": [
            "aws_vpc.cadastro_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cadastro_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:609278931430:subnet/subnet-058b90871bbffea06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058b90871bbffea06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "609278931430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cadastro_private_subnet_0"
            },
            "tags_all": {
              "Name": "cadastro_private_subnet_0"
            },
            "vpc_id": "vpc-05bfda49987ebf478"
          },
          "dependencies": [
            "aws_vpc.cadastro_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:609278931430:subnet/subnet-07ffe2257ee10497f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ffe2257ee10497f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "609278931430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cadastro_private_subnet_1"
            },
            "tags_all": {
              "Name": "cadastro_private_subnet_1"
            },
            "vpc_id": "vpc-05bfda49987ebf478"
          },
          "dependencies": [
            "aws_vpc.cadastro_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cadastro_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:609278931430:subnet/subnet-0617812da414d29cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0617812da414d29cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "609278931430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cadastro_public_subnet_0"
            },
            "tags_all": {
              "Name": "cadastro_public_subnet_0"
            },
            "vpc_id": "vpc-05bfda49987ebf478"
          },
          "dependencies": [
            "aws_vpc.cadastro_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cadastro_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:609278931430:vpc/vpc-05bfda49987ebf478",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05400b7489f0dfe4f",
            "default_route_table_id": "rtb-0d2a12a09f8c24f61",
            "default_security_group_id": "sg-0b7f1b497247cf07a",
            "dhcp_options_id": "dopt-0aabb42a05be30055",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05bfda49987ebf478",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d2a12a09f8c24f61",
            "owner_id": "609278931430",
            "tags": {
              "Name": "cadastro_vpc"
            },
            "tags_all": {
              "Name": "cadastro_vpc"
            }
          }
        }
      ]
    }
  ]
}